# app/Constants/SwaggerRoute.php
@@ -4,16 +4,23 @@ namespace App\Constants;
 
 class SwaggerRoute
 {
-    public const FILES = 'files';
+    public const FILE = [
+        'MAIN_ROUTE' => '/users/my-mobile-offers/files',
+        'CHILD_ROUTES' => [
+            'cloudinary-presigned-urls' => '/cloudinary-presigned-urls',
+            'cloudinary-notifications-url' => '/cloudinary-notifications-url',
+            'media' => '/medias/{public_id}',
+            'temporary-uploaded-images' => '/temporary-uploaded-images/{public_id}',
+        ],
+    ];
 
     public const MY_MOBILE_OFFER_FILE = [
         'MAIN_ROUTE' => '/users/my-mobile-offers/files',
         'CHILD_ROUTES' => [
-            'cloudinary-presigned-urls' => '/users/my-mobile-offers/files/cloudinary-presigned-urls',
-            'cloudinary-notifications-url' => '/users/my-mobile-offers/files/cloudinary-notifications-url',
-            'media' => '/users/my-mobile-offers/files/medias/{public_id}',
-            'temporary-uploaded-images' => '/users/my-mobile-offers/files/temporary-uploaded-images/{public_id}',
-
+            'cloudinary-presigned-urls' => '/cloudinary-presigned-urls',
+            'cloudinary-notifications-url' => '/cloudinary-notifications-url',
+            'media' => '/medias/{public_id}',
+            'temporary-uploaded-images' => '/temporary-uploaded-images/{public_id}',
         ],
     ];
 }
